force-app/main/default/objects/AI_API_Log__c/AI_API_Log__c.object-meta.xml
<CustomObject>
    <label>AI API Log</label>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>AI API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>