force-app/main/default/objects/AI_API_Log__c/fields/AI_Provider__c.field-meta.xml
<CustomField>
    <fullName>AI_Provider__c</fullName>
    <label>AI Provider</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OpenAI</fullName>
            </value>
            <value>
                <fullName>Anthropic_Claude</fullName>
            </value>
            <value>
                <fullName>Google_Gemini</fullName>
            </value>
            <value>
                <fullName>Azure_OpenAI</fullName>
            </value>
            <value>
                <fullName>AWS_Bedrock</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>