force-app/main/default/objects/AI_API_Log__c/fields/ContentVersion_Id__c.field-meta.xml
<CustomField>
    <fullName>ContentVersion_Id__c</fullName>
    <description>Reference to uploaded file</description>
    <label>ContentVersion Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>