force-app/main/default/objects/AI_API_Log__c/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <description>API endpoint called</description>
    <label>Endpoint URL</label>
    <type>Url</type>
</CustomField>