force-app/main/default/objects/AI_API_Log__c/fields/HTTP_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Status_Code__c</fullName>
    <description>e.g., 200, 400, 500</description>
    <label>HTTP Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>