force-app/main/default/objects/AI_API_Log__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <description>e.g., gpt-4o, claude-3-opus, gemini-pro</description>
    <label>Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>