force-app/main/default/objects/AI_API_Log__c/fields/Parsed_Result__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Result__c</fullName>
    <description>Extracted/parsed JSON data</description>
    <label>Parsed Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>