force-app/main/default/objects/AI_API_Log__c/fields/Processing_Time_ms__c.field-meta.xml
<CustomField>
    <fullName>Processing_Time_ms__c</fullName>
    <description>Time taken for API call</description>
    <label>Processing Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>