force-app/main/default/objects/AI_API_Log__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <description>Reference to AI_Prompt__mdt used</description>
    <label>Prompt Template</label>
    <length>100</length>
    <type>Text</type>
</CustomField>