force-app/main/default/objects/AI_API_Log__c/fields/Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Candidate whose CV was parsed</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AI API Logs</relationshipLabel>
    <relationshipName>AI_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>