force-app/main/default/objects/AI_API_Log__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV_Parse</fullName>
            </value>
            <value>
                <fullName>CV_Match</fullName>
            </value>
            <value>
                <fullName>Job_Match</fullName>
            </value>
            <value>
                <fullName>Skill_Extract</fullName>
            </value>
            <value>
                <fullName>Summary_Generate</fullName>
            </value>
            <value>
                <fullName>Chat_Completion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>