force-app/main/default/objects/AI_API_Log__c/fields/Source_File_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_File_Type__c</fullName>
    <label>Source File Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>DOC</fullName>
            </value>
            <value>
                <fullName>TXT</fullName>
            </value>
            <value>
                <fullName>RTF</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>