force-app/main/default/objects/AI_API_Log__c/fields/Token_Count_Input__c.field-meta.xml
<CustomField>
    <fullName>Token_Count_Input__c</fullName>
    <label>Input Tokens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>