force-app/main/default/objects/AI_API_Log__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who triggered the API call</description>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AI_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>